--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next": "^14.3.0"
+    "next": "14.2.15"
   },
   "devDependencies": {
     "typescript": "^5.0.0",
@@ -25,7 +25,7 @@
     "autoprefixer": "^10.4.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0",
-    "@cloudflare/next-on-pages": "^1.13.0",
+    "@cloudflare/next-on-pages": "^1.12.0",
     "wrangler": "^3.0.0"
   }
 }
