Configurar pages_build_output_dir en wrangler.toml

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,10 +1,5 @@
 name = "myracecal"
 compatibility_date = "2024-01-01"
 
-[env.production]
-name = "myracecal"
-routes = [
-  { pattern = "myracecal.app", custom_domain = true },
-  { pattern = "www.myracecal.app", custom_domain = true }
-]
+pages_build_output_dir = ".vercel/output/static"
 
