Agregar autenticación con Google y sistema de favoritos

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,12 @@
 # O simplemente: https://docs.google.com/spreadsheets/d/{SHEET_ID}
 GOOGLE_SHEET_URL=
 
+# NextAuth Configuration
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=tu_secret_key_aqui_genera_una_con_openssl_rand_base64_32
+
+# Google OAuth Credentials
+# Obtén estas credenciales en: https://console.cloud.google.com/apis/credentials
+GOOGLE_CLIENT_ID=tu_google_client_id_aqui
+GOOGLE_CLIENT_SECRET=tu_google_client_secret_aqui
+
