--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next": "14.2.15",
-    "next-auth": "^4.24.5"
+    "next": "14.2.15"
   },
   "devDependencies": {
     "typescript": "^5.0.0",
